Bug 181615 - tablet pressure doesn't work when only opacity and/or darken is set
Summary: tablet pressure doesn't work when only opacity and/or darken is set
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-22 18:20 UTC by enkithan
Modified: 2009-04-28 19:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description enkithan 2009-01-22 18:20:54 UTC
Version:           trunk (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

Using the Pixel brush and an Intuos III stylus:
pressure sensitivity for opacity and darken only work properly when pressure is set to "size". If it is disabled for size, but enabled for opacity and/or darken, it will works as if the input was a mouse.
Comment 1 Cyrille Berger 2009-04-26 23:49:51 UTC
SVN commit 959720 by berger:

Fix: tablet pressure doesn't work when only opacity and/or darken is set

BUG:181615


 M  +0 -4      kis_brushop.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=959720
Comment 2 Cyrille Berger 2009-04-28 13:18:57 UTC
same problem with pen paintop
Comment 3 Cyrille Berger 2009-04-28 19:25:17 UTC
SVN commit 960591 by berger:

fix painting with opacity only for pen/eraser

BUG:181615


 M  +0 -10     brush/kis_brushop.cpp  
 M  +0 -3      brush/kis_brushop.h  
 M  +0 -13     eraser/kis_eraseop.cpp  
 M  +0 -3      eraser/kis_eraseop.h  
 M  +0 -13     pen/kis_penop.cpp  
 M  +0 -3      pen/kis_penop.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=960591