Fix: tablet pressure doesn't work when only opacity and/or darken is set

BUG:181615

svn path=/trunk/koffice/; revision=959720